syntax = "proto3";

package pb;
import "rpc_create_user.proto";
import "google/api/annotations.proto";
import "rpc_login_user.proto";
option go_package = "github.com/fajaramaulana/simple_bank_project/pb";

service SimpleBank {
    rpc CreateUser(CreateUserRequest) returns (CreateUserRespose) {
        option (google.api.http) = {
            post: "/grpc/v1/user"
            body: "*"
        };
    };
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {
        option (google.api.http) = {
            post: "/grpc/v1/auth/login"
            body: "*"
        };
    };
}